// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagInput adds leading hashtags when flag is set 1`] = `
<div
  className="root"
  onClick={[Function]}
>
  <ul
    className="selected"
  >
    <li
      className="selectedTag"
      key="1"
    >
      <span
        className="selectedTagName"
      >
        #
        one
      </span>
      <a
        className="selectedTagRemove"
        onClick={[Function]}
      >
        ×
      </a>
    </li>
    <li
      className="selectedTag"
      key="2"
    >
      <span
        className="selectedTagName"
      >
        #
        two
      </span>
      <a
        className="selectedTagRemove"
        onClick={[Function]}
      >
        ×
      </a>
    </li>
  </ul>
  <div
    className="search"
  >
    <div
      className="searchInput"
    >
      <input
        className="searchInput"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Type..."
        spellCheck={false}
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`TagInput renders correctly (with min props) 1`] = `
<div
  className="root"
  onClick={[Function]}
>
  <ul
    className="selected"
  />
  <div
    className="search tags-empty"
  >
    <div
      className="searchInput"
    >
      <input
        className="searchInput tags-empty"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Type..."
        spellCheck={false}
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`TagInput renders correctly with tags 1`] = `
<div
  className="root"
  onClick={[Function]}
>
  <ul
    className="selected"
  >
    <li
      className="selectedTag"
      key="1"
    >
      <span
        className="selectedTagName"
      >
        one
      </span>
      <a
        className="selectedTagRemove"
        onClick={[Function]}
      >
        ×
      </a>
    </li>
    <li
      className="selectedTag"
      key="2"
    >
      <span
        className="selectedTagName"
      >
        two
      </span>
      <a
        className="selectedTagRemove"
        onClick={[Function]}
      >
        ×
      </a>
    </li>
  </ul>
  <div
    className="search"
  >
    <div
      className="searchInput"
    >
      <input
        className="searchInput"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Type..."
        spellCheck={false}
        type="text"
      />
    </div>
  </div>
</div>
`;
